# syntax-probe

./: .gitignore  README.md  pyproject.toml
analyses/: __init__.py  _common.py  c_command_stats.py  diagnose_patching.py  patching_cross_model.py  patching_stats.py  run_all_stats.py  wh_extraction_stats.py
configs/activation_patching/: cc_n1_gemma3_12b.yaml  cc_n1_gemma3_1b.yaml  cc_n1_gemma3_27b.yaml  cc_n1_gemma3_4b.yaml  cc_n1_llama31_8b.yaml  cc_n1_llama32_1b.yaml  cc_n1_mistral_7b_v03.yaml  cc_n1_qwen25_1_5b.yaml  cc_n1_qwen25_7b.yaml  cc_n1_qwen3_14b.yaml  cc_n1_qwen3_1_7b.yaml  cc_n1_qwen3_4b.yaml  cc_n1_qwen3_8b.yaml  wh_w2_gemma3_12b.yaml  wh_w2_gemma3_1b.yaml  wh_w2_gemma3_27b.yaml  wh_w2_gemma3_4b.yaml  wh_w2_llama31_8b.yaml  wh_w2_llama32_1b.yaml  wh_w2_mistral_7b_v03.yaml  wh_w2_qwen25_1_5b.yaml  wh_w2_qwen25_7b.yaml  wh_w2_qwen3_14b.yaml  wh_w2_qwen3_1_7b.yaml  wh_w2_qwen3_4b.yaml  wh_w2_qwen3_8b.yaml
configs/applications/: c_command_gemma3_12b.yaml  c_command_gemma3_1b.yaml  c_command_gemma3_27b.yaml  c_command_gemma3_4b.yaml  c_command_llama31_8b.yaml  c_command_llama32_1b.yaml  c_command_mistral_7b_v03.yaml  c_command_qwen25_1_5b.yaml  c_command_qwen25_7b.yaml  c_command_qwen3_14b.yaml  c_command_qwen3_1_7b.yaml  c_command_qwen3_4b.yaml  c_command_qwen3_8b.yaml  wh_extraction_gemma3_12b.yaml  wh_extraction_gemma3_1b.yaml  wh_extraction_gemma3_27b.yaml  wh_extraction_gemma3_4b.yaml  wh_extraction_llama31_8b.yaml  wh_extraction_llama32_1b.yaml  wh_extraction_mistral_7b_v03.yaml  wh_extraction_qwen25_1_5b.yaml  wh_extraction_qwen25_7b.yaml  wh_extraction_qwen3_14b.yaml  wh_extraction_qwen3_1_7b.yaml  wh_extraction_qwen3_4b.yaml  wh_extraction_qwen3_8b.yaml
configs/probe_training/: gemma3_12b_ud_ewt.yaml  gemma3_1b_ud_ewt.yaml  gemma3_27b_ud_ewt.yaml  gemma3_4b_ud_ewt.yaml  llama31_8b_ud_ewt.yaml  llama32_1b_ud_ewt.yaml  mistral_7b_v03_ud_ewt.yaml  qwen25_1_5b_ud_ewt.yaml  qwen25_7b_ud_ewt.yaml  qwen3_14b_ud_ewt.yaml  qwen3_1_7b_ud_ewt.yaml  qwen3_4b_ud_ewt.yaml  qwen3_8b_ud_ewt.yaml
configs/stimuli/: c_command.yaml  wh_extraction.yaml
configs/verify_stimuli/: c_command_spacy.yaml  wh_extraction_spacy.yaml
syntax_probe/: __init__.py  cli.py
syntax_probe/core/: __init__.py  config.py  context.py  io.py  seed.py
syntax_probe/corpora/: __init__.py  distance.py  schema.py  ud_ewt.py
syntax_probe/experiments/: __init__.py  activation_patching.py  apply_probes.py  base.py  c_command_stimuli.py  probe_training.py  registry.py  verify_stimuli.py  wh_extraction_stimuli.py
syntax_probe/extraction/: __init__.py  alignment.py  cache.py  (+2 more)
(+13 files in other folders)
